--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -60,7 +60,7 @@
 }
 .fondoestrofa7{
     background-size: cover;
-    background-image: url(../imagenes/fondo7.png);
+    background-image: url(../imagenes/fondoprueba.jpg);
     background-repeat: no-repeat;
 }
 
@@ -303,30 +303,27 @@ z-index: 90;
     z-index: 89;
     width: 55%;
 }
-.arbol{
-    width: 50%;
-    top: 10vw;
-    position: absolute;
-    z-index: 90;
-}
+
 .buho1{
-    width: 25%;
-    right: 19vw;
+    width:12%;
+}
+.buho1inicio{
+    position:fixed;
+    left: 10vw;
+    bottom: 5vw;
     z-index: 90;
 }
-.iniciobuho{
-    position:fixed;
-    right: 10%;
-    top: 3%;
-    z-index: 90;
-}
-.finalbuho{
-    position:fixed;
-    right:15%;
-    top: 5%;
+
+.buhofinal{
+    position: fixed;
+    left: 50vw;
+    bottom: 2vw;
     transition: all 3s;
     z-index: 90;
+    
 }
+
+
 .papagayoestro10{
     width: 17%;
 }
