--- a/app-muiscas/www/saludos/css/presentacionxv.css
+++ b/app-muiscas/www/saludos/css/presentacionxv.css
@@ -37,19 +37,19 @@ body{
 .informacion{
     width: 100%;
     height: 90vh;
-    overflow: auto;
     position: absolute;
     top:10vh;
+    display:none;
 }
 .cuerpo{
     width: 100%;
-    height: 88.5%;
+    height: 79%;
     overflow: auto;
     position:absolute;
     top:11vh;
 }
 #p0{
-    display: none;
+    display: flex;
 }
 #p1{
     display: none;
@@ -64,6 +64,24 @@ body{
     display: none;
 }
 #p5{
+    display: none;
+}
+#p6{
+    display: none;
+}
+#p7{
+    display: none;
+}
+#p8{
+    display: none;
+}
+#p9{
+    display: none;
+}
+#p10{
+    display: none;
+}
+#p11{
     display: none;
 }
 /* Cambio de pantalla */
@@ -151,7 +169,7 @@ body{
     color: black;
     margin-left: 20vw; 
 }
-.subministrar{
+.subministrar, .subinfo{
     border-top: 1vw solid #9e9e9e;
     display:none;
     background-color: white;
@@ -160,6 +178,9 @@ body{
     position:fixed;
     bottom:0;
     z-index: 79;
+}
+.subinfo{
+    display:none;
 }
 .inputexto{
     background-color: #f5f5f5;
