--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -58,6 +58,10 @@ body{
 }
 .textoicono{text-align: center;
     font-size: 3vh;
+	font-family:helvetica;
+    font-weight: 700;
+    text-decoration: none;
+
 
 }
 
@@ -82,4 +86,15 @@ font-family: helvetica;
 .creditos{text-align: center;
         font-size: 4vh;
         font-family: helvetica;
+}
+
+.color1{background-color: #F18616;
+}
+
+.color2{background-color: #FFFFFF
+;
+}
+.color3{background-color: #1AB1E1;
+}
+.color4{background-color: #95C11E;
 }
