--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -4,7 +4,7 @@ body{
 }
 .cabecera {
     width: 100%;
-    background-color:red;
+    background-color:#1AB1E1;
     position:fixed;
     left:0;
     top:0;
