--- a/app-muiscas/www/saludos/css/presentacionxh.css
+++ b/app-muiscas/www/saludos/css/presentacionxh.css
@@ -53,22 +53,16 @@ body{
     left:0%;
 }
 #p0{
+    display: flex;
+}
+#p1, #p2, #p3, #p4, #p5, #p6, #p7, #p8, #p9, #p10, #p11, #p12,
+#p13, #p14, #p15, #p16, #p17{
     display: none;
 }
-#p1{
-    display: none;
-}
-#p2{
-    display: none;
-}
-#p3{
-    display: none;
-}
-#p4{
-    display: none;
-}
-#p5{
-    display: none;
+.imagenchat{
+    width: 35vw;
+    margin:0% 1% 0% 25vw;
+    display:flex;
 }
 /* Cambio de pantalla */
 .cambio, .total{
