en la estrofa 8 coloque el sapo abajo trate de darle un efecto sinéxito, se le coloca trasparencia a laimagen, se creo otro gif arcoiris mas pequeño para que mejorará el sobrante en la pantalla, también sin exito, se volvió acolocar el gif arcoiris que estaba. en el css cambie la clase -todos los animales,colocando más arriba con una nota,para tratar de cuadrar los personajes en otro momento

--- a/app-muiscas/www/rondadecolores/css/rondadecolores.css
+++ b/app-muiscas/www/rondadecolores/css/rondadecolores.css
@@ -62,7 +62,7 @@
 }
 .fondoestrofa7{
     background-size: cover;
-    background-image: url(../imagenes/fondoprueba.jpg);
+    background-image: url(../imagenes/fondoarbol.jpg);
     background-repeat: no-repeat;
 }
 
@@ -368,6 +368,52 @@ z-index: 90;
     z-index: 89;
     width: 55%;
 }
+.rana1{
+    position: absolute;
+     width: 10%;
+    z-index: 200;
+    bottom: 5vh;
+
+}
+.movimiento1{
+    position:absolute;
+     right: 10vw;
+    bottom: 0;
+    margin: 0;
+    width: 10%;
+   
+}
+.movimiento2{
+    position:absolute;
+     right: 10vw;
+    bottom: 0;
+    z-index: 89;
+    margin: 0;
+    
+}
+.movimiento3{
+    position:absolute;
+     right: 10vw;
+    bottom: 0;
+    margin: 0;
+    
+}
+.movimiento4{
+    position:absolute;
+     right: 10vw;
+    bottom: 0;
+
+    margin: 0;
+    
+}
+.movimiento5{
+    position:absolute;
+     right: 10vw;
+    bottom: 0;
+    margin: 0;
+   
+}
+
 
 /*hasta aquí van los personajes*/
 
