--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -4,7 +4,7 @@ body{
 }
 .cabecera {
     width: 100%;
-    background-color:#1AB1E1;
+    background-color:red;
     position:fixed;
     left:0;
     top:0;
@@ -17,10 +17,11 @@ body{
     float: left;
     margin:1.5%;
 }
-.titulos {
+.titulo {
     font-family:"helvetica";
     font-size: 6vw;
     line-height: 0;
+    font-weight:bolder;
 }
 .cuerpo{
     width: 100%;
@@ -112,7 +113,6 @@ body{
 
 .cabecerainfo{
     background-color: red;
-    box-shadow: 0 2.5vh 1vh -1vh gray;
     position:fixed;
     width: 100%;
     height:10vh;}
