--- a/app-muiscas/www/informacion/informacionxh.css
+++ b/app-muiscas/www/informacion/informacionxh.css
@@ -5,11 +5,11 @@ body{
 }
 .cabecerainfo{
     background-color: yellowgreen;
-    box-shadow: 0 2.5vh 1vh -1vh gray;
     position:fixed;
     top: 0;
     width: 100%;
     height:14vh;
+    z-index: 90;
 }
 
 
@@ -22,6 +22,7 @@ body{
     margin-top: 1.5vh;
 }
 .titulo{
+    color:white;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
