--- a/app-muiscas/www/css/indexv.css
+++ b/app-muiscas/www/css/indexv.css
@@ -89,13 +89,12 @@ font-family: helvetica;
         font-family: helvetica;
 }
 
-.color1{background-color: #F18616;
+.color1{background-color:#FFFFFF;
 }
 
-.color2{background-color: #FFFFFF
-;
+.color2{background-color:#1AB1E1 ;
 }
-.color3{background-color: #1AB1E1;
+.color3{background-color: #F18616;
 }
 .color4{background-color: #95C11E;
 }
