--- a/app-muiscas/www/saludos/css/otrossaludosxv.css
+++ b/app-muiscas/www/saludos/css/otrossaludosxv.css
@@ -1,67 +1,66 @@
-body{
+﻿body{
     margin:0;
     padding: 0;
-    overflow: hidden;
+    overflow:hidden;
 }
-
-.cabecera { 
+.cabecera {
     width: 100%;
-    background-color:lightskyblue;
+    background-color:#1AB1E1;
     position:fixed;
     left:0;
     top:0;
     z-index:99;
 }
-
-.cabecera img{ 
-    width: 10%;
-    
+.atras{
+    width:5vh;
+    height:100%;
+    float: left;
+    margin:1vh;
 }
-
-#titulo{ 
+.logopersona{
+    width:7vh;
+    float: left;
+    margin:1vh 1% 1% -1%;
+}
+.titulo{
     font-family:"helvetica";
-    font-size: 10vw;
-    line-height: 0;	
-    float: right;
+    line-height:0;
+    font-size: 6vw;
 }
-.cuerpo{
-    background-color:#ffffff;
-    width: 100%;
-    height:94%;
-    overflow:auto;
-    position:absolute;
-    top:11%;
-    height: 93.5%;
-    z-index:80;
+.subtitulo{
+    font-family:"helvetica";
+    font-size: 4vw;
+    line-height:0.1;
+    text-align: right;
+    margin-right: 2%;
 }
-
 .otrossaludos {width: 100%;
-               
+
 
 }
 
 .otrossaludos img {width: 100%;
-               
+
 
 }
 
 .textootrossaludos{text-align: center;
-                    
+
 }
 
 
 .tabla{width: 100%;
-        
-        
+
+
 }
 
 .tabla table{  margin: 0 auto;
-       
+
 }
 
 
 table, th, td{  border-bottom: 1px solid #ddd;
     text-align: center;
     font-size: 3.5vh;
-    
+
 }
