--- a/app-muiscas/www/informacion/informacionxv.css
+++ b/app-muiscas/www/informacion/informacionxv.css
@@ -22,11 +22,13 @@ body{
     margin-top: 1.5vh;
 }
 .titulo{
+    margin: 0;
+    color: white;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    top: 1.5vh;
-    font-size: 3vh;
+    top: 0.8vh;
+    font-size: 10vw;
     font-family: helvetica;
     
    
@@ -40,7 +42,7 @@ body{
 	position: fixed;
 	top: 10.1vh;
     overflow: auto;
-    height: 80vh;
+    height: 85vh;
 
 }
 
