--- a/app-muiscas/www/informacion/informacionxh.css
+++ b/app-muiscas/www/informacion/informacionxh.css
@@ -33,29 +33,30 @@ body{
    
 }
 .cuerpo{
-    width: 100%;
-	font-size: 3vh;
+    width: 99%;
+	font-size: 3.5vh;
 	font-family: helvetica;
 	background-color: "#ff9100";
 	margin: 1%;
 	position: fixed;
 	top: 10.1vh;
     overflow: auto;
-    height: 80vh;
+    height: 87.5vh;
 
 }
 
-.color {width: 99%;
+.color {
+    width: 99%;
     text-align: justify;
 
 }
 .color img{
     width: 35%;
     float: left;
-    margin-top: .5em;
-  margin-bottom: .5em;
+    margin-top: 1em;
+  margin-bottom: 1em;
   margin-left: 1em;
-  margin-right: .5em;
+  margin-right: 1em;
 }
 
 .color p {margin: 1% 1% 1% 1%;
@@ -79,3 +80,14 @@ body{
 }
 
 .cola {text-align: center;}
+
+.iconoli{
+    width: 40vw;
+    margin-left: 25vw;
+}
+h1{
+    text-align: center;
+}
+b{
+    margin-left: 40vw;
+}
