--- a/app-muiscas/www/informacion/informacionxv.css
+++ b/app-muiscas/www/informacion/informacionxv.css
@@ -35,7 +35,7 @@ body{
 }
 .cuerpo{
     width: 100%;
-	font-size: 2vh;
+	font-size: 4vw;
 	font-family: helvetica;
 	background-color: "#ff9100";
 	margin: 1%;
@@ -46,7 +46,7 @@ body{
 
 }
 
-.color {width: 95%;
+.color {width: 97%;
     text-align: justify;
 
 }
@@ -72,7 +72,9 @@ body{
 	float: left;
 
 }
-
+.instituciones{
+    padding: 15% 0.2% 85% 1%; 
+}
 .cola {text-align: center;}
 .iconoli{
     width: 40vw;
