--- a/app-muiscas/www/numeros/css/numerosxh.css
+++ b/app-muiscas/www/numeros/css/numerosxh.css
@@ -47,10 +47,10 @@ body{
     box-shadow: 0 2.5vh 1vh -1vh gray;
     position:fixed;
     width: 100%;
-    height:35vh;
+    height:27vh;
 }
 .atrasnumeros{
-    width: 10%;
+    width: 15vh;
     position: fixed;
     top:5vh;
     left: 1%;
@@ -65,7 +65,8 @@ body{
 .cuerponumeros{
     overflow:auto;
     position: fixed;
-    top:41vh;
+    top:30vh;
+    height:69.8vh;
 }
 .imgnumeros{
     width:19%;
