--- a/app-muiscas/www/numeros/css/numerosxv.css
+++ b/app-muiscas/www/numeros/css/numerosxv.css
@@ -47,6 +47,7 @@ body{
 }
 .mostrarnumeros{
     background-color: red;
+    box-shadow: 0 2.5vh 1vh -1vh gray;
     position:fixed;
     width: 100%;
     height:15vh;
@@ -67,7 +68,8 @@ body{
 .cuerponumeros{
     overflow:auto;
     position: fixed;
-    top:15.2vh;
+    top:16vh;
+    height:83.8vh;
 }
 .imgnumeros{
     width:32%;
