burbujas ejercicios arregladas

--- a/app-muiscas/www/saludos/css/choaxh.css
+++ b/app-muiscas/www/saludos/css/choaxh.css
@@ -45,6 +45,10 @@ body{
     width:15%;
     transition:all 2s;
 }
+.taman{
+    width:15%;
+    height:15%;
+}
 .zoom{
     width:20%;
     transition:all 2s;
