--- a/app-muiscas/www/saludos/css/choaxh.css
+++ b/app-muiscas/www/saludos/css/choaxh.css
@@ -192,7 +192,7 @@ body{
     border: 0.1em solid #ffa726;
 }
 
-.enunciado,{
+.enunciado{
     color:white;
     font-family: "helvetica";
     font-size: 5.5vh;
