--- a/app-muiscas/www/informacion/informacionxv.css
+++ b/app-muiscas/www/informacion/informacionxv.css
@@ -1,8 +1,8 @@
-body{
+﻿body{
   background-color: white;
   margin: 0;
   padding: 0;
-  
+
 }
 .cabecerainfo{
     background-color: yellowgreen;
@@ -30,8 +30,8 @@ body{
     top: 0.8vh;
     font-size: 8.5vw;
     font-family: helvetica;
-    
-   
+
+
 }
 .cuerpo{
     width: 100%;
@@ -73,7 +73,8 @@ body{
 
 }
 .instituciones{
-    padding: 15% 0.2% 85% 1%; 
+    padding: 15% 0.2% 85% 1%;
+    margin-bottom:6%;
 }
 .cola {text-align: center;}
 .iconoli{
