--- a/app-muiscas/www/numeros/css/ejerciciosxh.css
+++ b/app-muiscas/www/numeros/css/ejerciciosxh.css
@@ -79,6 +79,9 @@ body{
     float: left;
     margin: -2% 2%;
 }
+.enunrespuesta{
+    display:inline-flex;
+}
 .imgr{
     width: 100%;
     margin: 1% 2% 2% 2%;
@@ -103,22 +106,27 @@ body{
     box-shadow: 1.5vw 0.5vw 2vw #999;
     width: 100%;
     height: 15vh;
+    display:inline-flex;
+    align-items: center;
     position:fixed;
     top:0;
     left: 0;
 }
+.imgresultados{
+    width:12.5vh;
+}
 .res{
     font-family: "helvetica";
     font-weight: 900;
-    font-size: 7vh;
-    margin-top: 1vh;
+    font-size: 10vh;
     margin-left: 1vw;
 }
 .error{
-    position: fixed;
-    top:0;
-    right: 1.5vh;
-} 
+    right: 1vw;
+}
+.resultadoder{
+    margin-left:75vw;
+}
 .imgacierto, .imgerror{
     width: 50vh;
     position:absolute;
