--- a/app-muiscas/www/numeros/css/ejerciciosxv.css
+++ b/app-muiscas/www/numeros/css/ejerciciosxv.css
@@ -3,33 +3,33 @@ body{
     padding: 0;
 }
 .subministrar{
-	border-top: 1vw solid #9e9e9e;
-	display:none;
-	background-color: white;
-	width:100%;
-	padding:1%;
-	position:fixed;
-	bottom:0;
-	z-index: 79;
+    border-top: 1vw solid #9e9e9e;
+    display:none;
+    background-color: white;
+    width:100%;
+    padding:1%;
+    position:fixed;
+    bottom:0;
+    z-index: 79;
 }
 .inputexto{
-	background-color: #f5f5f5;
-	font-size: 5vw;
-	display:inline-flex;
-	border:none;
-	border-bottom: 1vw solid #9e9e9e;
-	width:90%;
-	margin: 0;
+    background-color: #f5f5f5;
+    margin: 0;
+    font-size: 5vw;
+    display:inline-flex;
+    border:none;
+    border-bottom: 1vw solid #9e9e9e;
+    width:90%;
 }
 .enter{
-	display:inline-flex;
-	font-size:9vw;
-	font-weight: 900;
-	margin:0% 1% 0% 1%;
+    display:inline-flex;
+    font-size:9vw;
+    font-weight: 900;
+    margin:0% 1% 0% 1%;
 }
 .caja{
-	width: 100%;
-	height: 50%;
+    width: 100%;
+    height: 50%;
     overflow: hidden;
     position:fixed;
     top:0;
@@ -84,10 +84,27 @@ body{
     float:left;
     margin: 3%;
 }
+.opc{
+    color:black;
+    font-family: "helvetica";
+    text-decoration: none;
+    font-size: 6vw;
+    font-weight: 800;
+    margin: 3%;
+}
 .imgrespuesta{
     width: 15%;
     float: left;
     margin: -3% 1% 0 0;
+}
+.enunrespuesta{
+    display:inline-flex;
+}
+.imgresultados{
+    width:12.5vw;
+}
+.resultadoder{
+    margin-left:60vw;
 }
 .imgr{
     width: 100%;
@@ -101,8 +118,11 @@ body{
 .resultados{
     background-color: red;
     box-shadow: 1.5vw 0.5vw 2vw #999;
+    padding: 1% 2% 0% 2%;
     width: 100%;
     height: 10vh;
+    display:inline-flex;
+    align-items: center;
     position:fixed;
     top:0;
     left: 0;
@@ -110,14 +130,11 @@ body{
 .res{
     font-family: "helvetica";
     font-weight: 900;
-    font-size: 7vw;
-    margin-top: 1vh;
-    margin-left: 1vw;
+    font-size: 10vw;
+    margin-left: 2vw;
 }
 .error{
-    position: fixed;
-    top:0;
-    right: 1.5vw;
+    right: 2vw;
 }
 .imgacierto, .imgerror{
     width: 50%;
